--- a/app/src/main/res/layout/activity_main2_dados_inversor.xml
+++ b/app/src/main/res/layout/activity_main2_dados_inversor.xml
@@ -43,12 +43,13 @@
             android:layout_alignBottom="@+id/textView6"
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@+id/textView6"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/renogive"
             android:inputType="textPersonName"
             android:labelFor="@+id/idModInver"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView7"
@@ -67,12 +68,13 @@
             android:layout_alignBaseline="@+id/textView7"
             android:layout_alignBottom="@+id/textView7"
             android:layout_toEndOf="@+id/textView7"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_3_kw_pico"
             android:inputType="numberDecimal"
             android:labelFor="@+id/id_pot_nominal"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView8"
@@ -91,12 +93,13 @@
             android:layout_alignBaseline="@+id/textView8"
             android:layout_alignBottom="@+id/textView8"
             android:layout_toEndOf="@+id/textView8"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_2"
             android:inputType="number"
             android:labelFor="@+id/idnumTracMPPT"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView9"
@@ -116,12 +119,13 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView9"
             android:layout_toEndOf="@+id/textView9"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_100_v"
             android:inputType="textPersonName|numberDecimal"
             android:labelFor="@+id/idmenor_mppt"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView10"
@@ -140,12 +144,13 @@
             android:layout_alignBaseline="@+id/textView10"
             android:layout_alignBottom="@+id/textView10"
             android:layout_toEndOf="@+id/textView10"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_300_v"
             android:inputType="textPersonName|numberDecimal"
             android:labelFor="@+id/idmaiorVMPPT"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView11"
@@ -164,12 +169,13 @@
             android:layout_alignBaseline="@+id/textView11"
             android:layout_alignBottom="@+id/textView11"
             android:layout_toEndOf="@+id/textView11"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_50"
             android:inputType="number"
             android:labelFor="@+id/id_coefi_MPPT"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView12"
@@ -188,12 +194,13 @@
             android:layout_alignBaseline="@+id/textView12"
             android:layout_alignBottom="@+id/textView12"
             android:layout_toEndOf="@+id/textView12"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_95"
             android:inputType="number"
             android:labelFor="@+id/Id_fator_pot"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView13"
@@ -212,12 +219,13 @@
             android:layout_alignBaseline="@+id/textView13"
             android:layout_alignBottom="@+id/textView13"
             android:layout_toEndOf="@+id/textView13"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_4"
             android:inputType="numberDecimal"
             android:labelFor="@+id/id_THD"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView14"
@@ -236,12 +244,13 @@
             android:layout_alignBaseline="@+id/textView14"
             android:layout_alignBottom="@+id/textView14"
             android:layout_toEndOf="@+id/textView14"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_1000v"
             android:inputType="numberDecimal"
             android:labelFor="@+id/idVmaxcc"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView15"
@@ -260,12 +269,13 @@
             android:layout_alignBaseline="@+id/textView15"
             android:layout_alignBottom="@+id/textView15"
             android:layout_toEndOf="@+id/textView15"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_9a"
             android:inputType="numberDecimal"
             android:labelFor="@+id/IdcorrenteMaxStr"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <TextView
             android:id="@+id/textView16"
@@ -283,12 +293,13 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView16"
             android:layout_toEndOf="@+id/textView16"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_60_hz"
             android:inputType="number"
             android:labelFor="@+id/idFreqRede"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_dark" />
 
         <Button
             android:id="@+id/idbuttonseguiact3"
