--- a/app/src/main/res/layout/activity_main3_activityinversor.xml
+++ b/app/src/main/res/layout/activity_main3_activityinversor.xml
@@ -17,17 +17,18 @@
             android:id="@+id/titulo_rend_inv_2"
             android:layout_width="201dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="347dp"
+            android:layout_marginBottom="32dp"
             android:layout_marginTop="54dp"
             android:contentDescription="@string/efi_inv"
             android:layerType="software"
             android:scrollbars="none"
             android:text="@string/efici_inv_1"
             android:textAllCaps="false"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/editTensao_Saida"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,7 +56,7 @@
             android:id="@+id/edit_rend_inv"
             android:layout_width="0dp"
             android:layout_height="28dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_19"
             android:inputType="numberDecimal"
@@ -73,9 +74,7 @@
             android:id="@+id/editTensao_Saida"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_30V"
             android:inputType="numberDecimal"
@@ -84,16 +83,15 @@
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tex_tens_said"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tex_tens_said"
-            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+            app:layout_constraintStart_toEndOf="@+id/tex_tens_said" />
 
         <EditText
             android:id="@+id/editCorrente_Saida"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_9_a"
             android:inputType="numberDecimal"
@@ -110,7 +108,7 @@
             android:id="@+id/editPeso_Inv"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_20_kg"
             android:inputType="numberDecimal"
@@ -128,7 +126,7 @@
             android:id="@+id/editArea_Inv"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_1_m"
             android:inputType="numberDecimal"
@@ -145,7 +143,7 @@
             android:id="@+id/edit_Garantia_Inv"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/_10_anos"
             android:inputType="numberDecimal"
@@ -162,7 +160,7 @@
             android:id="@+id/edit_Preco_Inv"
             android:layout_width="0dp"
             android:layout_height="29dp"
-            android:background="#030101"
+            android:background="@android:color/darker_gray"
             android:ems="10"
             android:hint="@string/r_2000_00"
             android:inputType="numberDecimal"
@@ -203,27 +201,32 @@
             android:id="@+id/tex_tens_said"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/tensao_Saida_texto"
             android:layerType="software"
             android:text="@string/tensao_Saida_texto"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editTensao_Saida"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/editCorrente_Saida"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tex_corrente_said2"
             android:layout_width="0dp"
             android:layout_height="24dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/corrente_Saida_texto"
             android:layerType="software"
             android:text="@string/corrente_Saida_texto"
             android:textAlignment="viewStart"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/editPeso_Inv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
@@ -231,14 +234,17 @@
             android:id="@+id/Tex_peso_inv"
             android:layout_width="0dp"
             android:layout_height="24dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/corrente_Saida_texto"
             android:layerType="software"
             android:text="@string/text_Peso_Inv"
             android:textAlignment="viewStart"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/editArea_Inv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tex_corrente_said2" />
 
@@ -251,9 +257,10 @@
             android:layerType="software"
             android:text="@string/text_Area_inv"
             android:textAlignment="viewStart"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Tex_peso_inv" />
 
@@ -261,14 +268,17 @@
             android:id="@+id/tex_garantia_preco"
             android:layout_width="0dp"
             android:layout_height="24dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/corrente_Saida_texto"
             android:layerType="software"
             android:text="@string/text_Garantia_preco"
             android:textAlignment="viewStart"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/edit_Preco_Inv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tex_area_inv" />
 
@@ -276,14 +286,17 @@
             android:id="@+id/tex_preco_inv"
             android:layout_width="0dp"
             android:layout_height="24dp"
+            android:layout_marginBottom="110dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/corrente_Saida_texto"
             android:layerType="software"
             android:text="@string/text_preco_inv"
             android:textAlignment="viewStart"
-            android:textColor="?android:attr/colorBackgroundCacheHint"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/idbuttonVoltaract2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tex_garantia_preco" />
 
