--- a/app/src/main/res/layout/activity_main2_dados_inversor.xml
+++ b/app/src/main/res/layout/activity_main2_dados_inversor.xml
@@ -5,7 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.Main2Activity_dados_inversor"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:theme="@style/Base.Theme.AppCompat">
 
     <RelativeLayout
 
